# hopmux

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  go.mod  go.sum  main.go  pyproject.toml
core/discover/: discover.go  hidewindow_other.go  hidewindow_windows.go  mock.go  ssh.go
core/mcp/: tools.go
core/model/: model.go
core/probe/: probe.go
core/sshconfig/: sshconfig.go
core/tmuxctl/: tmuxctl.go
desktop/: build-mac.sh  package-dmg.sh
desktop/hopmux-desktop/: app.go  config.go  console_other.go  console_windows.go  go.mod  go.sum  main.go  wails.json
desktop/hopmux-desktop/frontend/: index.html  package-lock.json  package.json  package.json.md5
desktop/hopmux-desktop/frontend/src/: main.ts  style.css
desktop/hopmux-desktop/frontend/src/assets/fonts/: D2Coding-LICENSE.txt
docs/: USAGE.md
hopmux/: __init__.py  app.py  app.tcss  cli.py  config.py  discovery.py  models.py  probe.py  ssh.py  theme.py  tmuxctl.py
internal/mcp/: server.go  tools.go
internal/ui/: demo.go  model.go  theme.go  ui_test.go  update.go  view.go
packaging/macos/: build-app.sh
scripts/: make_demo.py
